--- a/p1.html
+++ b/p1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ma page web</title>
+    <title>My page web</title>
   </head>
   <body>
-    <h1>Bienvenue sur ma page web</h1>
+    <h1>welcom to my page web</h1>
     <p>Cette page est hébergée localement sur le port 8090.</p>
   </body>
 </html>
